--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
-  "@react-three/postprocessing": "^3.0.4",
+    "@react-three/postprocessing": "^3.0.4",
     "@use-gesture/react": "^10.3.0",
     "@vercel/analytics": "^1.1.1",
     "jotai": "^2.6.3",
-    "next": "15.4.6",
+    "next": "^16.0.10",
     "postprocessing": "^6.37.7",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hotkeys-hook": "^5.1.0",
     "react-joystick-component": "^6.2.1",
     "three": "^0.179.1"
@@ -34,9 +34,9 @@
     "typescript": "^5"
   },
   "overrides": {
-  "three": "^0.179.1",
-  "postprocessing": "^6.37.7",
-  "@react-three/postprocessing": "^3.0.4",
+    "three": "^0.179.1",
+    "postprocessing": "^6.37.7",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/react": "19.1.9",
     "@types/react-dom": "19.1.7"
   }
